Added Detector to custom-parser

--- a/test/data/custom-parser.css
+++ b/test/data/custom-parser.css
@@ -3,4 +3,5 @@
   * @description Your standard form button.
   * @helloworld hello world
   * @sectionmaker Base > Button
+  * @media block.media should be undefined
   */
